--- a/Tp-Final-labo4/src/app/Components/top-bar/top-bar.css
+++ b/Tp-Final-labo4/src/app/Components/top-bar/top-bar.css
@@ -29,14 +29,14 @@
   height: 46px;
   border-radius: 50%;
   object-fit: cover;
+  box-shadow: 0 0 8px rgba(0,0,0,0.45);
 }
 
 .app-title {
   font-weight: 600;
   font-size: 18px;
-  color: #222;
+  color: #f9fafb;          /* texto clarito */
 }
-
 /* ===== CENTRO: BUSCADOR ===== */
 
 .topbar-center {
@@ -45,6 +45,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 
 .search-wrapper {
   display: flex;
@@ -104,8 +105,9 @@
   align-items: center;
   justify-content: flex-end;
   gap: 12px;
-  min-width: 190px;
+  min-width: 120px; /* o directamente eliminar */
 }
+
 
 /* Perfil */
 .profile-link {
@@ -117,7 +119,7 @@
 
 .profile-text {
   font-size: 14px;
-  color: #444;
+  color: #e5e7eb;          /* gris claro */
 }
 
 .profile-avatar {
@@ -159,10 +161,18 @@
 /* RESPONSIVE */
 @media (max-width: 768px) {
   .topbar-container {
-    flex-direction: column;
-    align-items: stretch;
-    gap: 12px;
-  }
+  width: 100%;
+  max-width: 1400px;          /* podés dejar 1200 si querés */
+  margin: 16px auto 0;
+  padding: 0 40px;            /* un poco más de aire */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
+  font-family: "Segoe UI", Arial, sans-serif;
+}
+
+
 
   .topbar-right {
     justify-content: center;
