--- a/Tp-Final-labo4/src/app/Components/admin-home/admin-home.html
+++ b/Tp-Final-labo4/src/app/Components/admin-home/admin-home.html
@@ -23,8 +23,11 @@
       <p>Revisar reseñas de películas y moderarlas.</p>
     </article>
 
-    <!-- (Opcional) REPORTES futuro -->
-    <!-- <article class="admin-card disabled">...</article> -->
+    <!-- REPORTES -->
+    <article class="admin-card" (click)="goTo('reports')">
+      <h2>Ver reportes</h2>
+      <p>Revisá reportes enviados por los usuarios.</p>
+    </article>
 
   </section>
 </main>
