Fix MovieReview: agregar DatePipe + safe navigation en watchedDate

--- a/Tp-Final-labo4/src/app/Components/movie-review/movie-review.html
+++ b/Tp-Final-labo4/src/app/Components/movie-review/movie-review.html
@@ -31,7 +31,7 @@
            @if (activity?.watchedDate) {
         <p class="watch-date">
             Vista el:
-           <strong>{{ activity.watchedDate | date:'shortDate' }}</strong>
+           <strong>{{ activity?.watchedDate | date:'shortDate' }}</strong>
           </p>
           }
         </div>
